[sigma_circuits] Analyzed 210331 IPTG/aTc ramp data. parse_mux_long now handles unparsable commands and commands with line breaks.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210402 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210402 Analysis JQS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "female-guide",
+   "id": "upset-brook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broke-rugby",
+   "id": "canadian-museum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "communist-business",
+   "id": "cutting-string",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sweet-lover",
+   "id": "charitable-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informative-attack",
+   "id": "running-cooperative",
    "metadata": {},
    "source": [
     "# Load data"
@@ -69,52 +69,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hindu-textbook",
+   "id": "sought-junior",
    "metadata": {},
    "outputs": [],
    "source": [
     "# nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210324/PWM_flipped.nd2\"\n",
-    "nd2_filename2 = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\""
+    "# nd2_filename2 = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "international-score",
+   "id": "enormous-findings",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
+    "# nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occasional-parking",
+   "id": "romance-agent",
    "metadata": {},
    "outputs": [],
    "source": [
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
-    "filename = (\n",
-    "    \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
-    ")\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
     "data = pickle.load(open(filename, \"rb\"))\n",
     "df = data[\"table\"]\n",
-    "md = data[\"metadata\"]"
+    "md = data[\"metadata\"]\n",
+    "mux_log = data[\"mux_log\"]\n",
+    "experiment_txt = data[\"experiment.txt\"]\n",
+    "grid_df = data[\"grid\"]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "plain-indonesian",
+   "id": "bibliographic-extreme",
    "metadata": {},
    "source": [
-    "# Date"
+    "# Acquisition times"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "annual-letters",
+   "id": "operational-dryer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,142 +126,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wooden-pricing",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = md[\"acquisition_times\"]\n",
-    "(x[:100], x[-100:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "direct-ebony",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fluid-candidate",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "24729414.28245997"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "suffering-device",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1.84467432e13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ideal-plaintiff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label = \"acquisition_times\"\n",
-    "chunk_location = getattr(nd2.parser._label_map, label)\n",
-    "raw_data = nd2reader.common.read_chunk(nd2._fh, chunk_location)\n",
-    "raw_ary = np.array(array.array(\"d\", raw_data))\n",
-    "(raw_ary[:20], raw_ary[-20:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "representative-fourth",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2.parser._label_map.acquisition_times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "systematic-coordinator",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "roman-strengthening",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md[\"acquisition_times\"][:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecological-freeze",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = md[\"acquisition_times\"][:] != md[\"acquisition_times\"][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "sound-nitrogen",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "actual-devil",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_df = experiment.get_grid(nd2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "outside-observer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acq_times = np.fromiter(nd2._parser._raw_metadata.acquisition_times, dtype=np.float64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "extended-black",
+   "id": "official-delta",
    "metadata": {},
    "outputs": [],
    "source": [
     "dtimeabsolute = get_in(\n",
-    "    (b\"SLxPictureMetadata\", b\"dTimeAbsolute\"),\n",
-    "    nd2._parser._raw_metadata.image_metadata_sequence,\n",
+    "    (\"SLxPictureMetadata\", \"dTimeAbsolute\"),\n",
+    "    md[\"image_metadata_sequence\"],\n",
     ")\n",
+    "dtimeabsolute = Time(dtimeabsolute, format=\"jd\").to_datetime()\n",
     "dtimemsec = get_in(\n",
-    "    (b\"SLxPictureMetadata\", b\"dTimeMSec\"),\n",
-    "    nd2._parser._raw_metadata.image_metadata_sequence,\n",
+    "    (\"SLxPictureMetadata\", \"dTimeMSec\"),\n",
+    "    md[\"image_metadata_sequence\"],\n",
     ")\n",
     "tdelta = timedelta(milliseconds=dtimemsec)"
    ]
@@ -267,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "removed-officer",
+   "id": "reduced-klein",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,207 +155,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assisted-midnight",
+   "id": "renewable-yukon",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(acq_times[-1] - acq_times[0]) / 60 / 60"
+    "first_position_times = md[\"acquisition_times\"][:: len(grid_df)] / 1e3  # seconds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affected-multiple",
+   "id": "perceived-smell",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.diff(acq_times)\n",
-    "y = x[x < 100]"
+    "last_good_cycle = np.argmax(np.diff(first_position_times) == 0) - 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "obvious-darkness",
+   "id": "modular-advice",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[5000]"
+    "seconds_per_timepoint = first_position_times[last_good_cycle] / last_good_cycle"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "measured-recovery",
+   "id": "streaming-childhood",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(y, bins=50)"
+    "mux_times = [m[0] for m in mux_log]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concrete-allah",
+   "id": "chronic-honey",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(acq_times)"
+    "mux_timepoints = [\n",
+    "    (m - dtimeabsolute).total_seconds() / seconds_per_timepoint for m in mux_times\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "japanese-state",
+   "id": "alleged-boost",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtimeabsolute"
+    "mux_timepoints"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instant-cameroon",
+   "id": "judicial-shape",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = Time(dtimeabsolute, format=\"jd\")"
+    "mux_timepoints2 = [\n",
+    "    np.argmax((m - dtimeabsolute).total_seconds() <= first_position_times)\n",
+    "    for m in mux_times\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recorded-instrument",
+   "id": "sophisticated-automation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.to_datetime()"
+    "mux_timepoints2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mighty-trader",
+   "id": "important-kennedy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtimemsec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "metallic-signature",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2._parser._raw_metadata.acquisition_times??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "light-minority",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acq_times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "consecutive-microwave",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(acq_times)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "overhead-rider",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dramatic-discipline",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "separate-tension",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cognitive-worry",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sizes = nd2.sizes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "awful-category",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows, cols = np.meshgrid(np.arange(sizes[\"v\"]), np.arange(sizes[\"t\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "lasting-fabric",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame({\"pos\": rows.ravel(), \"t\": cols.ravel(), \"time\": })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acoustic-lightweight",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.DataFrame(ziplist(product(range(sizes[\"v\"]), range(sizes[\"t\"])))[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "impressive-folks",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
+    "plt.plot(md[\"acquisition_times\"][:5000])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "contemporary-offering",
+   "id": "interpreted-mathematics",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -486,16 +258,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bright-framing",
+   "id": "going-typing",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
     "cells = df.join(grid_df).reset_index()\n",
     "filtered_cells = cells[\n",
-    "    cells[\"area\"].between(300, 1500)\n",
-    "    & cells[\"GFP-PENTA\"].between(100, 5000)\n",
-    "    & cells[\"row\"].isin([\"A\", \"C\", \"D\", \"E\", \"G\", \"H\"])\n",
+    "    cells[\"area\"].between(200, 800)\n",
+    "    & cells[\"GFP-PENTA\"].between(100, 4000)\n",
+    "    & ~cells[\"row\"].isin([\"F\"])\n",
     "][[\"GFP-PENTA\", \"row\", \"t\"]]\n",
     "\n",
     "filtered_cells2 = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
@@ -505,10 +277,25 @@
     "means = filtered_cells2.apply(np.mean)\n",
     "sigmas = filtered_cells2.apply(np.std)\n",
     "\n",
-    "limits = pd.DataFrame({\"lower\": means - sigmas, \"upper\": means + sigmas})\n",
+    "limits = pd.DataFrame({\"lower\": means - sigmas, \"upper\": means + sigmas})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rocky-iceland",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mean_plot = means.hvplot.line(\"t\", by=\"row\", logy=True)\n",
     "noise_plot = limits.hvplot.area(\n",
     "    x=\"t\", y=\"lower\", y2=\"upper\", by=\"row\", stacked=False, alpha=0.2, logy=True\n",
+    ")\n",
+    "mux_events = hv.Overlay(\n",
+    "    [\n",
+    "        hv.VLine(t).opts(alpha=0.2, color=\"grey\", line_dash=\"dotted\")\n",
+    "        for t in mux_timepoints\n",
+    "    ]\n",
     ")\n",
     "\n",
     "# line_alpha = 0.2\n",
@@ -538,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chief-drinking",
+   "id": "optional-trigger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +335,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stunning-class",
+   "id": "abroad-hearing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(mean_plot * noise_plot * mux_events).opts(width=800, height=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "settled-doctrine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(experiment_txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "entitled-sarah",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mux_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assumed-possible",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mux_timepoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "original-philosophy",
    "metadata": {},
    "outputs": [],
    "source": []
