--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210402 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210402 Segmentation.ipynb
@@ -101,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster = LocalCluster(scheduler_options=dict(dashboard_address=\"0.0.0.0:8787\"))\n",
-    "client = Client(cluster)"
+    "# cluster = LocalCluster(scheduler_options=dict(dashboard_address=\"0.0.0.0:8787\"))\n",
+    "# client = Client(cluster)"
    ]
   },
   {
@@ -165,36 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_positions = (\n",
-    "    np.array([17, 25, 54, 64, 96, 124, 150]) - 1\n",
-    ")  # 1-indexing to 0-indexing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "good_positions2 = (good_positions + np.arange(8)[:, np.newaxis]).T.reshape(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "good_positions2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210324/PWM_flipped.nd2\"\n",
+    "nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210331/ramp.nd2\"\n",
     "# nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\"\n",
     "nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
    ]
@@ -272,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "103 not in stored"
+    "# stored = {}"
    ]
   },
   {
@@ -281,7 +252,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stored = {}"
+    "# for k, v in data_futures.items():\n",
+    "#     print(k)\n",
+    "#     if k in (104, 115):\n",
+    "#         continue\n",
+    "#     if k not in stored:\n",
+    "#         stored[k] = client.gather(v)"
    ]
   },
   {
@@ -290,12 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, v in data_futures.items():\n",
-    "    print(k)\n",
-    "    if k in (104, 115):\n",
-    "        continue\n",
-    "    if k not in stored:\n",
-    "        stored[k] = client.gather(v)"
+    "# dfs = stored"
    ]
   },
   {
@@ -306,15 +277,6 @@
    "source": [
     "%%time\n",
     "dfs = client.gather(data_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs = stored"
    ]
   },
   {
@@ -384,7 +346,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"table\": df, \"metadata\": md, \"mux_log\": mux_log}"
+    "experiment_txt_file = Path(nd2_filename).parent / \"experiment.txt\"\n",
+    "if experiment_txt_file.exists():\n",
+    "    experiment_txt = experiment_txt_file.open().read()\n",
+    "else:\n",
+    "    experiment_txt = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_df = experiment.get_grid(nd2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"table\": df,\n",
+    "    \"metadata\": md,\n",
+    "    \"mux_log\": mux_log,\n",
+    "    \"experiment.txt\": experiment_txt,\n",
+    "    \"grid\": grid_df,\n",
+    "}"
    ]
   },
   {
@@ -400,11 +390,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
