[sigma_circuits] Improved plotting code, changed grid_df columns to categorical.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210404 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210404 Analysis JQS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "upset-brook",
+   "id": "thick-success",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import matplotlib.pyplot as plt\n",
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
-    "from cytoolz import get_in\n",
+    "from cytoolz import get_in, partial\n",
+    "import astropy.stats\n",
     "from astropy.time import Time\n",
     "from datetime import datetime, timedelta\n",
     "from pathlib import Path\n",
@@ -26,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "canadian-museum",
+   "id": "affiliated-capacity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cutting-string",
+   "id": "supported-childhood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charitable-farmer",
+   "id": "deadly-acrobat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-cooperative",
+   "id": "julian-number",
    "metadata": {},
    "source": [
     "# Load data"
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sought-junior",
+   "id": "boxed-tucson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enormous-findings",
+   "id": "logical-rover",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romance-agent",
+   "id": "mechanical-airplane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-extreme",
+   "id": "hollywood-beverage",
    "metadata": {},
    "source": [
     "# Acquisition times"
@@ -116,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operational-dryer",
+   "id": "ahead-limitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-delta",
+   "id": "natural-gates",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reduced-klein",
+   "id": "thermal-lending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "renewable-yukon",
+   "id": "expected-label",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "perceived-smell",
+   "id": "aggregate-bearing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modular-advice",
+   "id": "loaded-intent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "streaming-childhood",
+   "id": "automatic-music",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chronic-honey",
+   "id": "surface-precipitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-boost",
+   "id": "dressed-passion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "judicial-shape",
+   "id": "parliamentary-italy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sophisticated-automation",
+   "id": "modified-intervention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "important-kennedy",
+   "id": "third-nelson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interpreted-mathematics",
+   "id": "together-kitty",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -258,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "going-typing",
+   "id": "beautiful-clock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,49 +284,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-iceland",
+   "id": "different-houston",
    "metadata": {},
    "outputs": [],
    "source": [
     "mean_plot = means.hvplot.line(\"t\", by=\"row\", logy=True)\n",
     "noise_plot = limits.hvplot.area(\n",
     "    x=\"t\", y=\"lower\", y2=\"upper\", by=\"row\", stacked=False, alpha=0.2, logy=True\n",
-    ")\n",
-    "mux_events = hv.Overlay(\n",
-    "    [\n",
-    "        hv.VLine(t).opts(alpha=0.2, color=\"grey\", line_dash=\"dotted\")\n",
-    "        for t in mux_timepoints\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# line_alpha = 0.2\n",
-    "# IPTG_starts = (\n",
-    "#     hv.VLine(12).opts(alpha=line_alpha, color=\"blue\")\n",
-    "#     * hv.VLine(60).opts(alpha=line_alpha, color=\"blue\")\n",
-    "#     * hv.VLine(108).opts(alpha=line_alpha, color=\"blue\")\n",
-    "#     * hv.VLine(156).opts(alpha=line_alpha, color=\"blue\")\n",
-    "# )\n",
-    "# EZ_starts = (\n",
-    "#     hv.VLine(30).opts(alpha=line_alpha, color=\"grey\")\n",
-    "#     * hv.VLine(78).opts(alpha=line_alpha, color=\"grey\")\n",
-    "#     * hv.VLine(126).opts(alpha=line_alpha, color=\"grey\")\n",
-    "#     * hv.VLine(174).opts(alpha=line_alpha, color=\"grey\")\n",
-    "# )\n",
-    "# aTc_starts = (\n",
-    "#     hv.VLine(42).opts(alpha=line_alpha, color=\"red\")\n",
-    "#     * hv.VLine(90).opts(alpha=line_alpha, color=\"red\")\n",
-    "#     * hv.VLine(138).opts(alpha=line_alpha, color=\"red\")\n",
-    "#     * hv.VLine(186).opts(alpha=line_alpha, color=\"red\")\n",
-    "# )\n",
-    "\n",
-    "# (IPTG_starts*EZ_starts*aTc_starts*means*errors).opts(width=1000,height=400)\n",
-    "# (means * errors).opts(width=1000, height=400)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optional-trigger",
+   "id": "distant-vegetation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +307,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abroad-hearing",
+   "id": "optical-uncertainty",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mux_events = hv.Overlay(\n",
+    "    [\n",
+    "        hv.VLine(t).opts(alpha=0.2, color=\"grey\", line_dash=\"dotted\")\n",
+    "        for t in mux_timepoints\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "anonymous-serbia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,9 +330,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "experienced-memory",
+   "metadata": {},
+   "source": [
+    "## By position"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "settled-doctrine",
+   "id": "powerful-profession",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"centroid-0\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "single-piece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "controversial-rescue",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_size_md = get_in(\n",
+    "    (\n",
+    "        \"variant\",\n",
+    "        \"no_name\",\n",
+    "        \"vGrabberCameraSettings\",\n",
+    "        \"FormatFast\",\n",
+    "        \"fmtDesc\",\n",
+    "        \"sizeSensorPixels\",\n",
+    "    ),\n",
+    "    md[\"grabber_settings\"],\n",
+    ")\n",
+    "sensor_width = int(get_in((\"cx\", \"@value\"), sensor_size_md))\n",
+    "sensor_height = int(get_in((\"cy\", \"@value\"), sensor_size_md))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caring-current",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"dist_from_center\"].hvplot.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "potential-prairie",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "groupby = \"row\"  # row or pos\n",
+    "# skip background\n",
+    "cells = df.loc[IDX[:, :, 1:]].join(grid_df).reset_index()\n",
+    "cells[\"dist_from_center\"] = np.sqrt(\n",
+    "    (cells[\"centroid-0\"] - sensor_width) ** 2\n",
+    "    + (cells[\"centroid-1\"] - sensor_height) ** 2\n",
+    ")\n",
+    "filtered_cells = cells[\n",
+    "    cells[\"area\"].between(200, 800)\n",
+    "    & cells[\"GFP-PENTA\"].between(100, 4000)\n",
+    "    & ~cells[\"row\"].isin([\"F\"])\n",
+    "    & cells[\"dist_from_center\"]\n",
+    "    < 3000\n",
+    "][[\"GFP-PENTA\", \"RFP-PENTA\", \"area\", \"row\", \"pos\", \"t\"]]\n",
+    "\n",
+    "medians = filtered_cells.groupby([groupby, \"t\"]).agg(\n",
+    "    [\"median\", astropy.stats.median_absolute_deviation]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def get_limits(x):\n",
+    "    x = x.droplevel(0, axis=1)\n",
+    "    return pd.DataFrame(\n",
+    "        {\n",
+    "            \"lower\": x[\"median\"] - x[\"median_absolute_deviation\"],\n",
+    "            \"upper\": x[\"median\"] + x[\"median_absolute_deviation\"],\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "limits = medians.groupby(level=0, axis=1).apply(get_limits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adopted-nebraska",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observable = \"GFP-PENTA\"\n",
+    "\n",
+    "if groupby == \"pos\":\n",
+    "    medians2 = medians[observable][[\"median\"]].join(grid_df)\n",
+    "    limits2 = limits[observable].join(grid_df)\n",
+    "    mask = medians2[\"row\"].isin([\"A\"])  # TODO\n",
+    "    medians2 = medians2[mask]\n",
+    "    limits2 = limits2[mask]\n",
+    "else:\n",
+    "    medians2 = medians[observable].reset_index()\n",
+    "    limits2 = limits[observable].reset_index()\n",
+    "mean_plot = medians2.hvplot.line(\"t\", \"median\", by=groupby, logy=True)\n",
+    "noise_plot = limits2.hvplot.area(\n",
+    "    x=\"t\", y=\"lower\", y2=\"upper\", by=groupby, stacked=False, alpha=0.2, logy=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "piano-footwear",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(mean_plot * noise_plot).opts(width=800, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "owned-yemen",
+   "metadata": {},
+   "source": [
+    "## Logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "common-stocks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entitled-sarah",
+   "id": "caroline-needle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assumed-possible",
+   "id": "junior-passage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "original-philosophy",
+   "id": "quarterly-explanation",
    "metadata": {},
    "outputs": [],
    "source": []
