--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210404 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210404 Analysis JQS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thick-success",
+   "id": "accredited-gross",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affiliated-capacity",
+   "id": "unlikely-jackson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supported-childhood",
+   "id": "yellow-washington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deadly-acrobat",
+   "id": "valid-venezuela",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "julian-number",
+   "id": "wooden-affiliation",
    "metadata": {},
    "source": [
     "# Load data"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boxed-tucson",
+   "id": "early-section",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "logical-rover",
+   "id": "technical-wonder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mechanical-airplane",
+   "id": "behavioral-publicity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollywood-beverage",
+   "id": "radical-capital",
    "metadata": {},
    "source": [
     "# Acquisition times"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ahead-limitation",
+   "id": "practical-genius",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "natural-gates",
+   "id": "subjective-blues",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thermal-lending",
+   "id": "designing-archives",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expected-label",
+   "id": "technological-faith",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aggregate-bearing",
+   "id": "entire-utility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loaded-intent",
+   "id": "healthy-organizer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "automatic-music",
+   "id": "charming-applicant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surface-precipitation",
+   "id": "skilled-jordan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dressed-passion",
+   "id": "bulgarian-chester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parliamentary-italy",
+   "id": "cardiac-karaoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modified-intervention",
+   "id": "contained-shade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "third-nelson",
+   "id": "anonymous-encounter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-kitty",
+   "id": "ideal-sleeve",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -259,108 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beautiful-clock",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "cells = df.join(grid_df).reset_index()\n",
-    "filtered_cells = cells[\n",
-    "    cells[\"area\"].between(200, 800)\n",
-    "    & cells[\"GFP-PENTA\"].between(100, 4000)\n",
-    "    & ~cells[\"row\"].isin([\"F\"])\n",
-    "][[\"GFP-PENTA\", \"row\", \"t\"]]\n",
-    "\n",
-    "filtered_cells2 = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
-    "    lambda y: sigma_clip(y, sigma=2, maxiters=10, masked=False)\n",
-    ")\n",
-    "\n",
-    "means = filtered_cells2.apply(np.mean)\n",
-    "sigmas = filtered_cells2.apply(np.std)\n",
-    "\n",
-    "limits = pd.DataFrame({\"lower\": means - sigmas, \"upper\": means + sigmas})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "different-houston",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean_plot = means.hvplot.line(\"t\", by=\"row\", logy=True)\n",
-    "noise_plot = limits.hvplot.area(\n",
-    "    x=\"t\", y=\"lower\", y2=\"upper\", by=\"row\", stacked=False, alpha=0.2, logy=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "distant-vegetation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(mean_plot * noise_plot).opts(width=800, height=400)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "optical-uncertainty",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mux_events = hv.Overlay(\n",
-    "    [\n",
-    "        hv.VLine(t).opts(alpha=0.2, color=\"grey\", line_dash=\"dotted\")\n",
-    "        for t in mux_timepoints\n",
-    "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "anonymous-serbia",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(mean_plot * noise_plot * mux_events).opts(width=800, height=400)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "experienced-memory",
-   "metadata": {},
-   "source": [
-    "## By position"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "powerful-profession",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cells[\"centroid-0\"].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "single-piece",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "controversial-rescue",
+   "id": "innovative-attempt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,22 +281,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caring-current",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cells[\"dist_from_center\"].hvplot.hist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "potential-prairie",
+   "id": "israeli-attention",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "groupby = \"row\"  # row or pos\n",
     "# skip background\n",
     "cells = df.loc[IDX[:, :, 1:]].join(grid_df).reset_index()\n",
     "cells[\"dist_from_center\"] = np.sqrt(\n",
@@ -407,10 +295,54 @@
     "filtered_cells = cells[\n",
     "    cells[\"area\"].between(200, 800)\n",
     "    & cells[\"GFP-PENTA\"].between(100, 4000)\n",
+    "    & cells[\"RFP-PENTA\"].between(475, 4000)\n",
     "    & ~cells[\"row\"].isin([\"F\"])\n",
     "    & cells[\"dist_from_center\"]\n",
     "    < 3000\n",
-    "][[\"GFP-PENTA\", \"RFP-PENTA\", \"area\", \"row\", \"pos\", \"t\"]]\n",
+    "][[\"GFP-PENTA\", \"RFP-PENTA\", \"area\", \"row\", \"pos\", \"t\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "horizontal-eleven",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"dist_from_center\"].hvplot.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mature-money",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"RFP-PENTA\"][cells[\"RFP-PENTA\"].between(100, 3e3)].hvplot.hist(bins=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "spectacular-belief",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"RFP-PENTA\"][\n",
+    "    (cells[\"RFP-PENTA\"] > 1) & ~np.isnan(cells[\"RFP-PENTA\"])\n",
+    "].hvplot.hist(logy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "through-spine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "groupby = \"row\"  # row or pos\n",
     "\n",
     "medians = filtered_cells.groupby([groupby, \"t\"]).agg(\n",
     "    [\"median\", astropy.stats.median_absolute_deviation]\n",
@@ -433,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adopted-nebraska",
+   "id": "faced-review",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "piano-footwear",
+   "id": "worthy-purse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +398,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "owned-yemen",
+   "id": "complex-surprise",
+   "metadata": {},
+   "source": [
+    "## Heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "appreciated-shield",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = np.geomspace(\n",
+    "    filtered_cells[\"GFP-PENTA\"].min(), filtered_cells[\"GFP-PENTA\"].max(), 100\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "brilliant-exhaust",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "heatmap = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
+    "    lambda x: pd.Series(np.histogram(x[\"GFP-PENTA\"], bins=bins)[0], index=bins[:-1])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "widespread-crown",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Layout(\n",
+    "    [\n",
+    "        heatmap.loc[row].T.hvplot.heatmap(\n",
+    "            cmap=\"blues\",\n",
+    "            logy=True,\n",
+    "            logz=True,\n",
+    "            clim=(1, 1e4),  # xticks=list(range(183))\n",
+    "        )\n",
+    "        for row in (\"A\", \"D\", \"E\", \"G\")\n",
+    "    ]\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "strange-decrease",
    "metadata": {},
    "source": [
     "## Logs"
@@ -475,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "common-stocks",
+   "id": "minute-undergraduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caroline-needle",
+   "id": "honest-depth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-passage",
+   "id": "plain-peoples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quarterly-explanation",
+   "id": "contemporary-hundred",
    "metadata": {},
    "outputs": [],
    "source": []
