[sigma_circuits] Heatmaps plot with correct axes using xarray+quadmesh. There are small grey lines outlining each pixel, which do not appear with hv.Image, but I think this is an inherent problem in quadmesh+bokeh.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210404 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210404 Analysis JQS.ipynb
@@ -3,17 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accredited-gross",
+   "id": "synthetic-treaty",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import xarray as xr\n",
     "from astropy.stats import mad_std, sigma_clip\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
+    "import hvplot.xarray\n",
     "from cytoolz import get_in, partial\n",
     "import astropy.stats\n",
     "from astropy.time import Time\n",
@@ -27,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlikely-jackson",
+   "id": "recognized-coach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "yellow-washington",
+   "id": "elder-arcade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "valid-venezuela",
+   "id": "leading-southeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wooden-affiliation",
+   "id": "equivalent-sauce",
    "metadata": {},
    "source": [
     "# Load data"
@@ -70,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "early-section",
+   "id": "emerging-harvard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "technical-wonder",
+   "id": "instructional-badge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "behavioral-publicity",
+   "id": "dying-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radical-capital",
+   "id": "advance-setup",
    "metadata": {},
    "source": [
     "# Acquisition times"
@@ -117,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "practical-genius",
+   "id": "exclusive-residence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subjective-blues",
+   "id": "reflected-buffalo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designing-archives",
+   "id": "closing-discovery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "technological-faith",
+   "id": "aggregate-yorkshire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entire-utility",
+   "id": "peripheral-zoning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-organizer",
+   "id": "boring-apache",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charming-applicant",
+   "id": "gothic-diabetes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "skilled-jordan",
+   "id": "complimentary-porcelain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bulgarian-chester",
+   "id": "virtual-shanghai",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-karaoke",
+   "id": "recent-reviewer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contained-shade",
+   "id": "compressed-essay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "anonymous-encounter",
+   "id": "english-norfolk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ideal-sleeve",
+   "id": "acoustic-works",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -259,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innovative-attempt",
+   "id": "chubby-concern",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "israeli-attention",
+   "id": "herbal-findings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-eleven",
+   "id": "prescription-arena",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-money",
+   "id": "amateur-rachel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spectacular-belief",
+   "id": "organized-ordinance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "through-spine",
+   "id": "material-jesus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faced-review",
+   "id": "bronze-threat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worthy-purse",
+   "id": "italian-builder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-surprise",
+   "id": "decreased-astronomy",
    "metadata": {},
    "source": [
     "## Heatmap"
@@ -407,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appreciated-shield",
+   "id": "social-edmonton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,30 +421,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brilliant-exhaust",
+   "id": "measured-exploration",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "heatmap = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
-    "    lambda x: pd.Series(np.histogram(x[\"GFP-PENTA\"], bins=bins)[0], index=bins[:-1])\n",
-    ")"
+    "heatmap.index.levels[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "widespread-crown",
+   "id": "fabulous-steam",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "channel = \"GFP-PENTA\"\n",
+    "heatmap = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
+    "    lambda x: pd.Series(np.histogram(x[channel], bins=bins)[0], index=bins[:-1])\n",
+    ")\n",
+    "heatmap.columns.name = channel\n",
+    "heatmap = xr.Dataset({row: heatmap.loc[row].T for row in heatmap.index.levels[0]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "gross-paris",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heatmap.A.hvplot.quadmesh(cmap=\"blues\", logy=True, logz=True, clim=(1, 1e4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "brilliant-tulsa",
    "metadata": {},
    "outputs": [],
    "source": [
     "hv.Layout(\n",
     "    [\n",
-    "        heatmap.loc[row].T.hvplot.heatmap(\n",
+    "        heatmap[row].hvplot.quadmesh(\n",
     "            cmap=\"blues\",\n",
     "            logy=True,\n",
     "            logz=True,\n",
-    "            clim=(1, 1e4),  # xticks=list(range(183))\n",
+    "            clim=(1, 1e4),\n",
     "        )\n",
     "        for row in (\"A\", \"D\", \"E\", \"G\")\n",
     "    ]\n",
@@ -450,8 +475,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "resident-texture",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "channel = \"GFP-PENTA\"\n",
+    "heatmap_pos = filtered_cells.groupby([\"pos\", \"t\"]).apply(\n",
+    "    lambda x: pd.Series(np.histogram(x[channel], bins=bins)[0], index=bins[:-1])\n",
+    ")\n",
+    "heatmap_pos.columns.name = channel\n",
+    "heatmap_pos = xr.concat(\n",
+    "    [xr.DataArray(heatmap_pos.loc[pos].T) for pos in heatmap_pos.index.levels[0]],\n",
+    "    heatmap_pos.index.levels[0],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fitted-trouble",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_df[grid_df[\"row\"] == \"D\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dynamic-mathematics",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Layout(\n",
+    "    [\n",
+    "        heatmap_pos.sel(pos=pos).hvplot.quadmesh(\n",
+    "            cmap=\"blues\",\n",
+    "            logy=True,\n",
+    "            logz=True,\n",
+    "            clim=(1, 1e4),\n",
+    "        )\n",
+    "        for pos in range(60, 65)\n",
+    "    ]\n",
+    ").cols(1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "strange-decrease",
+   "id": "dressed-iraqi",
    "metadata": {},
    "source": [
     "## Logs"
@@ -460,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minute-undergraduate",
+   "id": "romance-giving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honest-depth",
+   "id": "adapted-picking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "plain-peoples",
+   "id": "practical-acceptance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contemporary-hundred",
+   "id": "white-amateur",
    "metadata": {},
    "outputs": [],
    "source": []
